# pmph_project

./: .gitignore
Project/: latticeproblem.txt  particleProblemCode.txt  particleproblem.txt
Project/Lattice Problem/Code/: CMakeLists.txt  Statistics.py  Statistics_kernel.py  ToDo.odt  benchmark.cpp  benchmark_results.csv  colonies3D.cpp  colonies3D.cu  colonies3D.hpp  colonies3D_Original.cpp  colonies3D_Original.hpp  colonies3D_kernels.cu.h  example3D  example3D.cpp  growthCurve3D  growthCurve3D.cpp  makefile  test1  test2
Project/Lattice Problem/Code/cuda_version/: .CopyDataAndHalo  .colonies3D.cu.swp  .gitignore  Makefile  benchmark  benchmark.cu  colonies3D.cu  colonies3D.hpp  colonies3D_helpers.cu  colonies3D_kernels.cu.h  colonies_new.cu  curand_test  curand_test.cu  example3D  example3D.cu  growthCurve3D  growthCurve3D.cpp  occ_gpu
Project/Lattice Problem/Code/cuda_version/data/2018-11-02/3D_Example/: kernel_timings_CPU_n100_15_3.txt  kernel_timings_CPU_n10_14_53.txt  kernel_timings_CPU_n21_14_55.txt  kernel_timings_CPU_n46_14_56.txt  kernel_timings_GPU_n100_15_0.txt  kernel_timings_GPU_n10_14_53.txt  kernel_timings_GPU_n21_14_55.txt  kernel_timings_GPU_n46_14_55.txt
Project/Lattice Problem/Code/data/2018-10-05/Growthcurve_NoMatrixMatrixMultiplication/nGrid_100/0/: log.txt
Project/Lattice Problem/Code/data/2018-10-05/Growthcurve_Original/nGrid_100/0/: PopulationSize.txt
Project/Particle Problem/Code/: Simulation.cpp  Simulation.hpp  main.cpp
